--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
 name: CI to Docker Hub 
 
 on:
-  push:
-    tags:
-      - "v*.*.*"
+  # start manually this workflow
+  workflow_dispatch:
 
 jobs:
 
